fix tags overlapping vertically

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -108,12 +108,14 @@ body {
 .read-more, .go-back, .text-muted {
 	color:silver;
 }
-.categories{
+.categories, .tags{
 	margin-top:20px;
 	margin-bottom:20px;
+	line-height: 40px;
 }
 .categories > a:before{
 	content:"· ";
+	white-space: nowrap;
 }
 .categories > a {
 	color:silver;
@@ -171,10 +173,6 @@ body {
 }
 .project-title{
 	margin: 7px;
-}
-.tags{
-	margin-top:20px;
-	margin-bottom:20px;
 }
 .tags > a:before {
 	white-space: nowrap;
